# monokl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
docs/: monokl-logo.afdesign  windows.rc
src/: application.cpp  application.h  error.h  logging.h  main.cpp  playlist.cpp  playlist.h  util.h  window.cpp  window.h
